k8s/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: telemetry-backend

spec:

  replicas: 3

  selector:
    matchLabels:
      app: telemetry-backend

  template:

    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "5000"
      labels:
        app: telemetry-backend
        version: v2

    spec:

      containers:

      - name: backend

        image: vehicle-telemetry-platform-backend:latest

        imagePullPolicy: Never

        ports:
        - containerPort: 5000

        livenessProbe:

          httpGet:
            path: /health
            port: 5000

          initialDelaySeconds: 10

          periodSeconds: 15

        readinessProbe:

          httpGet:
            path: /health
            port: 5000

          initialDelaySeconds: 5

          periodSeconds: 10
