k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: telemetry-backend-service

spec:

  selector:
    app: telemetry-backend

  ports:
    - port: 5000
      targetPort: 5000

  type: NodePort
