k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: telemetry-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: telemetry.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: telemetry-backend-service
            port:
              number: 5000
